save familly member & delete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -126,10 +126,10 @@
             </a>
           </li>
           <li class="nav-item">
-            <a routerLink='patient' class="nav-link">
+            <a routerLink='familyInfo' class="nav-link">
               <i class="nav-icon fas fa-home"></i>
               <p>
-                Family Members
+                Family Information
               </p>
             </a>
 
