--- a/src/app/components/family-members/family-members.component.html
+++ b/src/app/components/family-members/family-members.component.html
@@ -1,1 +1,69 @@
-<p>family-members works!</p>
+<!-- <div class="content-wrapper" style="background-image: url(/assets/images/loginback.avif);"> -->
+    <div class="content-wrapper">
+        <div class="container ">
+            <div class="row  justify-content-center">
+                <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
+    
+                    <div class="mt-5 elevation-2">
+                        <div class="card  ">
+                            <h2 style="text-align: center;" class="mt-5">Patient Family Member Information </h2>
+    
+    
+                            <div class="m-4">
+                                <form (ngSubmit)="saveFamilyMemberInfo()">    
+                                    <div class=" form-group text-left">
+                                        <label for="familyMemberName" class="form-label">Patient familyMemberName :</label>
+                                        <input type="text" class="form-control" id="familyMemberName" name="familyMemberName" [(ngModel)]="patientInfo.familyMemberName"
+                                            placeholder="enter your name" >   
+                                             
+                                    </div>
+                                    <div class="form-group text-left">
+                                        <label for="patientId" class="form-label">Patient Id :</label>
+                                        <input type="patientId" class="form-control" id="patientId" name="patientId"
+                                            placeholder="enter your patientId" [(ngModel)]="patientInfo.patientId" >                                       
+                                    </div>
+
+
+                                    <div class=" form-group text-left">
+                                        
+                                        <div class="form-group col-lg-12 flex-column d-flex">
+                                            <label for="relationship" class="form-label">Relationship :</label>
+                                            <select name="relationship" id="relationship" [(ngModel)]="patientInfo.relationship"
+                                                style="height: 30px;">
+                                                <option value="-1">add family member</option>
+                                                <option value="father">Father</option>
+                                                <option value="mather">Mother</option>
+                                                <option value="sisther">Sister</option>
+                                                <option value="father">Brother</option>
+                                                <option value="mather">others</option>
+                                            </select>
+                                            
+                                        </div>
+                                    </div> 
+                                    
+                                    <div class=" form-group text-left">
+                                        <label for="phonNo." class="form-label">Phone No. :</label>
+                                        <input type="text" class="form-control" id="phonNo." name="phonNo."
+                                            placeholder="enter your phonNo." [(ngModel)]="patientInfo.phonNo">                                       
+                                    </div>
+                                   
+                                    <div class=" form-group text-left">
+                                        <label for="address" class="form-label">Address :</label>
+                                        <input type="text" class="form-control" id="address" name="address"
+                                            placeholder="enter your address" [(ngModel)]="patientInfo.address" >
+                                    </div>        
+                                                                                                  
+                                    <button type="submit">Add </button>
+    
+                                </form>
+                            </div>
+                        </div>
+    
+                    </div>
+    
+                </div>
+                <div style="height: 100px;">
+                </div>
+            </div>
+        </div>
+    </div>
