--- a/src/app/components/showpatient/showpatient.component.html
+++ b/src/app/components/showpatient/showpatient.component.html
@@ -1,5 +1,8 @@
 <div class="container mt-5">
     <div class="row">
+        <div class="ml-5">
+            <h1 style="text-align: center;">Patients</h1>
+         </div>
         <div class="col-md-4 mb-3" *ngFor="let item of getPatient.data">
             <div class="card p-3">
                 <div class="d-flex flex-row mb-2">
