--- a/src/app/components/showpatient/showpatient.component.html
+++ b/src/app/components/showpatient/showpatient.component.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="btn-group ">
-                    <a (click)="editEmployee(item)" class="btn btn-primary col-md-6">Edit</a>
+                    <a (click)="editPatient(item)" class="btn btn-primary col-md-6">Edit</a>
                     <a (click)="deletePatient(item)" class="btn btn-success col-md-6">Delete</a>
                 </div>
             </div>
