--- a/src/app/components/show-fafmily-members/show-fafmily-members.component.html
+++ b/src/app/components/show-fafmily-members/show-fafmily-members.component.html
@@ -1,3 +1,4 @@
+<div class="content-wrapper">
 <div class="container mt-5">
     <div class="row">
         <div class="ml-5">
@@ -24,4 +25,5 @@
 
     </div>
 
+</div>
 </div>
