--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="index3.html" class="nav-link" style="font-size: 18px;color: rgb(255, 248, 248);">Patient Information Management System</a>
+        <a href="index3.html" class="nav-link" style="font-size: 18px;">Patient Information Management System</a>
       </li>
 
     </ul>
