--- a/src/app/components/showpatient/showpatient.component.html
+++ b/src/app/components/showpatient/showpatient.component.html
@@ -28,8 +28,9 @@
                         <div class="container mt-3">
                             <div class="row">
                                 <div class="col-md-12 bg-light">
-                                    <button type="button" [routerLink]="'/familyInfo'" class="btn ">Add Family Info</button>
-                                    <button type="button" [routerLink]="'/showFamilyMembers'" class="btn ">Show Family Members</button>
+                                    <button  [routerLink]="'/familyInfo'" class="btn btn-warning">Add Family Info</button><br>
+                                    <!-- <button  href=getFamilyMembers() class="btn btn-danger">Show Family Members</button> -->
+                                    <a (click)="getFamilyMembers()" class="btn btn-danger col-md-12">Show Family Members</a>
                                 </div>
                             </div>
                         </div>
