--- a/src/app/components/family-members/family-members.component.html
+++ b/src/app/components/family-members/family-members.component.html
@@ -8,19 +8,20 @@
                         <div class="card  ">
                             <h2 style="text-align: center;" class="mt-5">Patient Family Member Information </h2>
     
+                            <h4>{{patient.patientName}}</h4>
     
                             <div class="m-4">
                                 <form (ngSubmit)="saveFamilyMemberInfo()">    
                                     <div class=" form-group text-left">
                                         <label for="familyMemberName" class="form-label">Patient familyMemberName :</label>
-                                        <input type="text" class="form-control" id="familyMemberName" name="familyMemberName" [(ngModel)]="patientInfo.familyMemberName"
+                                        <input type="text" class="form-control" id="familyMemberName" name="familyMemberName" [(ngModel)]="familyMember.familyMemberName"
                                             placeholder="enter your name" >   
                                              
                                     </div>
                                     <div class="form-group text-left">
                                         <label for="patientId" class="form-label">Patient Id :</label>
                                         <input type="patientId" class="form-control" id="patientId" name="patientId"
-                                            placeholder="enter your patientId" [(ngModel)]="patientInfo.patientId" >                                       
+                                            placeholder="enter your patientId" [(ngModel)]="familyMember.patientId" >                                       
                                     </div>
 
 
@@ -28,14 +29,14 @@
                                         
                                         <div class="form-group col-lg-12 flex-column d-flex">
                                             <label for="relationship" class="form-label">Relationship :</label>
-                                            <select name="relationship" id="relationship" [(ngModel)]="patientInfo.relationship"
+                                            <select name="relationship" id="relationship" [(ngModel)]="familyMember.relationship"
                                                 style="height: 30px;">
                                                 <option value="-1">add family member</option>
-                                                <option value="father">Father</option>
-                                                <option value="mather">Mother</option>
-                                                <option value="sisther">Sister</option>
-                                                <option value="father">Brother</option>
-                                                <option value="mather">others</option>
+                                                <option value="Father">Father</option>
+                                                <option value="Mother">Mother</option>
+                                                <option value="Sister">Sister</option>
+                                                <option value="Brother">Brother</option>
+                                                <option value="Others">Others</option>
                                             </select>
                                             
                                         </div>
@@ -44,13 +45,13 @@
                                     <div class=" form-group text-left">
                                         <label for="phonNo." class="form-label">Phone No. :</label>
                                         <input type="text" class="form-control" id="phonNo." name="phonNo."
-                                            placeholder="enter your phonNo." [(ngModel)]="patientInfo.phonNo">                                       
+                                            placeholder="enter your phonNo." [(ngModel)]="familyMember.phonNo">                                       
                                     </div>
                                    
                                     <div class=" form-group text-left">
                                         <label for="address" class="form-label">Address :</label>
                                         <input type="text" class="form-control" id="address" name="address"
-                                            placeholder="enter your address" [(ngModel)]="patientInfo.address" >
+                                            placeholder="enter your address" [(ngModel)]="familyMember.address" >
                                     </div>        
                                                                                                   
                                     <button type="submit">Add </button>
