--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
   <!-- Preloader -->
   <div class="preloader flex-column justify-content-center align-items-center">
-    <img class="animation__shake" src="assets/imageslogo.png" height="60" width="60">
+    <!-- <img class="animation__shake" src="assets/imageslogo.png" height="60" width="60"> -->
   </div>
 
   <!-- Navbar -->
@@ -57,7 +57,7 @@
 
       <div class=" ml-5 mt-2 pb-10 ">
         <div class="image">
-          <img src="assets\images\imageslogo.png" class="img-circle elevation-2" height="120" width="100">
+          <img src="assets\images\L.png" class="img-circle " height="130" width="130">
         </div>
       </div>
 
@@ -67,7 +67,7 @@
 
 
       <!-- SidebarSearch Form -->
-      <div class="form-inline">
+      <!-- <div class="form-inline">
         <div class="input-group" data-widget="sidebar-search">
           <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
           <div class="input-group-append">
@@ -76,7 +76,7 @@
             </button>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- Sidebar Menu -->
       <nav class="mt-2" style="height: 1000;">
@@ -96,18 +96,7 @@
                 Add patient
               </p>
             </a>
-          </li>
-        
-          <li class="nav-item">
-            <a routerLink='showFamilyMembers' class="nav-link">
-              <i class="nav-icon fas fa-home"></i>
-              <p>
-                Family Members
-              </p>
-            </a>
-
-          </li>
-
+          </li>        
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
