--- a/src/app/components/family-members/family-members.component.html
+++ b/src/app/components/family-members/family-members.component.html
@@ -54,7 +54,7 @@
                                             placeholder="enter your address" [(ngModel)]="familyMember.address" >
                                     </div>        
                                                                                                   
-                                    <button type="submit">Add </button>
+                                    <button type="submit" class="btn btn-primary btn-lg">Add </button>
     
                                 </form>
                             </div>
