--- a/src/app/components/showpatient/showpatient.component.html
+++ b/src/app/components/showpatient/showpatient.component.html
@@ -28,9 +28,9 @@
                         <div class="container mt-3">
                             <div class="row">
                                 <div class="col-md-12 bg-light">
-                                    <a (click)="addFamilyMember(patient)" class="btn btn-sm" style="background-color: darkorange;">Add Family Member</a><br>
+                                    <a (click)="addFamilyMember(patient)" class="btn btn-sm" style="background-color: darksalmon;">Add Family Member</a><br>
                                     <!-- <button  href=getFamilyMembers() class="btn btn-danger">Show Family Members</button> -->
-                                    <a (click)="getFamilyMembers(patient)" class="btn btn-sm mt-1" style="background-color: darkorange;">Show Family Members</a>
+                                    <a (click)="getFamilyMembers(patient)" class="btn btn-sm mt-1" style="background-color: darksalmon;">Show Family Members</a>
                                 </div>
                             </div>
                         </div>
