--- a/src/app/components/family-members/family-members.component.html
+++ b/src/app/components/family-members/family-members.component.html
@@ -8,7 +8,7 @@
                         <div class="card  ">
                             <h2 style="text-align: center;" class="mt-5">Patient Family Member Information </h2>
     
-                            <h4>{{patient.patientName}}</h4>
+                            <h4 style="color:rgb(194, 99, 68) ;">{{"Patient Name: "+ patient.patientName}}</h4>
     
                             <div class="m-4">
                                 <form (ngSubmit)="saveFamilyMemberInfo()">    
@@ -54,7 +54,7 @@
                                             placeholder="enter your address" [(ngModel)]="familyMember.address" >
                                     </div>        
                                                                                                   
-                                    <button type="submit" class="btn btn-primary btn-lg">Add </button>
+                                    <button type="submit" class="btn btn-secondary btn-lg btn-block">Add </button>
     
                                 </form>
                             </div>
