--- a/src/app/components/patient/patient.component.html
+++ b/src/app/components/patient/patient.component.html
@@ -74,7 +74,7 @@
                                         formControlName="photo">
                                 </div>
                                 
-                                <button type="submit"> {{isSave?'Save':'Update'}} </button>
+                                <button class="btn btn-secondary btn-lg btn-block" type="submit"> {{isSave?'Save':'Update'}} </button>
 
                             </form>
                         </div>
